force-app/main/default/objects/Xero_Details__c/Xero_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Xero Details</label>
</CustomObject>