force-app/main/default/objects/Xero_Details__c/fields/Oatuh_Token__c.field-meta.xml
<CustomField>
    <fullName>Oatuh_Token__c</fullName>
    <label>Oatuh_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>