force-app/main/default/objects/Xero_Details__c/fields/Oauth_Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Consumer_Key__c</fullName>
    <label>Oauth_Consumer_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>