force-app/main/default/objects/Xero_Details__c/fields/Oauth_Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Signature_Method__c</fullName>
    <label>Oauth_Signature_Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>