force-app/main/default/objects/Xero_Details__c/fields/Oauth_Version__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Version__c</fullName>
    <label>Oauth_Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>