force-app/main/default/objects/Xero_Details__c/fields/Url_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Url_Encoding__c</fullName>
    <label>Url_Encoding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>