force-app/main/default/objects/Xero_Details__c/fields/Xero_Url__c.field-meta.xml
<CustomField>
    <fullName>Xero_Url__c</fullName>
    <label>Xero Url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>